docs/2.8/UpDataLog.md
> 2019.8.28

```
v0.03
构建框架
优化Struts2插件
更新Confluence插件(CVE_2019_3396)
```

> 2019.8.29

```
添加许可证
更新NginxCRLFInjectionVulnerability，NginxDirectoryTraversalVulnerability插件
```

> 2019.8.30

```
添加类合集
优化代码结构
```

> 2019.8.31

```
优化框架结构
增加随机头
解决写入文件乱码问题
```

> 2019.9.1

```
v0.1
添加随机Banner
添加端口扫描
优化框架结构
支持批量扫描
支持爆破数据库账号密码
```

> 2019.9.2

``` 
v0.12
添加爬取代理(并且清洗代理值
```

> 2019.9.3

```
v0.13
代理池实装
用argparse替换OptionParser
修复爆破数据库函数只使用单个URL参数而不是使用文件内的URL
对代理池进行逻辑判断，会优先尝试调用本地代理文件
优化u 或者f 必须存在一个，并且不能同时存在
v0.14
修复（代理池写入文件不换行）
修复（代理IP传入文件扫描文件内）
修复（代理池二次清洗BUG，导致进入死循环）
修复（读取文件不是单独一个IP而是一个IP池的问题）
修复（读取文件后IP带有\n换行符问题）
```

> 2019.9.7

```
v0.15
添加（扫描进度条）
删除（大范围的报错提示）
```

> 2019.9.8

```
v0.16
修复（万一代理池全不能用，进入死循环问题，如果全不能用直接不用代理）
修复（进度条意义不明问题）
修复（linux会报错找不到模块问题）
优化（代码结构）
添加（多线程功能）
添加（参数说明文档）
```

> 2019.9.9

```
v0.16.5
修复（多线程错误问题）
修复（使用代理进入死循环问题）
```

> 2019.9..10

```
v0.17
修复（代理文件读取问题）
更改（代理爬取从覆盖写入改为追加写入）
```

> 2019.9.11

```
v0.17.5
添加（Banner头25个，实现伪随机）
```

> 2019.9.13

```
v0.18
修复（导入头文件引发的扫描模块无法使用）
修复（代理池无法写入文件中错误）
修复（代理依旧进入死循环问题）
修复（POC文件主函数名不统一问题）
```

> 2019.9.14

```
v0.19
更改（README参数说明）
添加（Druid敏感信息泄露扫描）
添加（Git源码泄露扫描）
添加（Sftb敏感信息泄露扫描）
添加（Svn源码泄露扫描）
添加（PHPinfo探针泄露扫描）
添加（PHPapc敏感信息泄露扫描）
添加（判断文件日期如果大于3天删除，解决追加写入问题，提高代码流畅性）
```

> 2019.9.15

```
v0.19.5
添加（JS深度爬取子域名以及JS中的链接）
优化（把输出文件全部放到ScanResult文件夹中方便查找）
待更新（更全的子域名收集以及清洗）ps:写到一半没写完
```

> 2019.9.16

```
v0.19.5
添加（Apache ActiveMQ 任意文件上传漏洞）
```

> 2019.9.17

```
v0.19.5
添加（POC编写模板）
```

> 2019.9.21

```
v0.20
添加（搜寻子域名）
添加（CMS扫描POC，持续更新中）（目前化到Discuz
```

> 2019.9.22

```
添加（CMS扫描POC，目前化到Eyou
```

> 2019.9.23

```
添加（CMS扫描POC，目前化到Kxmail
```

> 2019.9.24

```
添加（CMS扫描POC，目前化到phpmyadmin
添加（phpstudy后门扫描脚本）
```

> 2019.9.25

```
v0.21
添加（CMS扫描POC，已转化完成）
```

> 2019.9.26

```
v0.21.2
添加（OA模块POC）
修复（j s se 参数Bug）
优化（多线程使用列表的形式开启）
修复（ProxyIp参数为""值而不是None）
修复（github上传后文件名会变成小写问题）
修复（扫描结果文件路径错误）
```

> 2019.9.27

```
v0.21.3
添加（泛微ecology OA系统远程代码执行漏洞）
```

> 2019.9.28

``` 
v0.22
删除（不严谨的POC）
修复（爬取网页JS链接传参错误问题）
修复（爬取网页JS链接写入结果文件名错误问题）
修复（Nmap文件写入目录错误）
修复（把Nmap单独开为一个线程）‘
添加（POC进度条）
添加（全模块总进度条）
优化（主函数调用模块，分工分明）
优化（POC主模块调用流程，变为多线程）
```

> 2019.9.29

```
v0.22
添加（JetBrains信息泄露插件）
添加（Options方法开启插件）
添加（JavaConfigurationFile信息泄露插件）
```

> 2019.9.30

```
v0.22.1
添加（根目录敏感文件扫描）
```

> 2019.10.7

```
v0.22.2
修复（根目录敏感文件扫描插件规则）
```

> 2019.10.10

```
v0.22.3
添加（存在泛微OA WorkflowCenterTreeData接口注入漏洞）
```

> 2019.10.12

```
v0.23
删除（使用文档v0.1）
添加（使用文档v1.0）
```

> 2019.10.19

```
v0.30
修改（使用文档为v2.0）
优化（对POC进行优化）
添加（数据库以及写入语句）
```

> 2019.10.20

```
优化（写入类）
优化（返回结果）
```

2019.11.3

```
v0.32
修复（类文件中写入的路径问题）
修复（删除上次大批量报错信息显示）
添加（添加报错显示类，报错信息写入文件中）
优化（插件中函数信息不全，加了几个点）
修复（除CMS之外的插件修复一些BUG）
```

> 2019.11.5

```
v0.33
优化（插件的端口）
优化（用友OA插件）
```

> 2019.11.6

```
v0.34
添加（插件多个payloadg返回规则）
修复（全量修复插件）
添加（插件一些规则）
修复（插件中一些规则漏洞）
```

> 2019.11.6

```
v0.35
优化（把数据库换成了轻量级数据库sqlite3）
优化（sql语句）
```

> 2019.11.9

```
v0.36
优化（多线程，全部POC放到一个线程池中）
添加（Nmap数据库）
添加（控制线程数）
优化（代码结构）
```

> 2019.11.9

```
v0.37
修复（Nmap扫描域名时会找不到值）
添加（NmapDB新增域名值）
添加（jenkins（CVE20181999002））
添加（jenkins（CVE20181000861））
添加（SolrVelocity模板远程代码执行漏洞）
修复（插件名字拼写错误）
```

> 2019.11.11

```
v0.38
添加（Jenkins配置错误导致未经授权的代码执行漏洞）
```

> 2019.11.16

```
v0.38X
添加（后台端测试代码（第一次写后端我哭了））
v0.38XL
修复（小BUG）
添加（几个后端代码）
```

> 2019.11.18

```
v0.39
添加（Celery队列以及Redis）
```

> 2019.11.23

```
v0.40
修复了Nginx+Redis搭配的冲突
添加全局扫描API
修改了原来的扫描调用
```

> 2019.11.24

```
v0.40X
添加单独模块扫描API
添加数据库查询API
添加覆盖组件文档
修改POC模板一个小瑕疵
```

> 2019.11.25

```
v0.40XL
添加多个数据库查询API模板
```

> 2019.11.25

```
v0.41
修复数据库SQL注入问题
```

> 2019.12.2

```
v0.42
把原来的Cms命名为CMSX（因为不准确暂时不调用了，要是想用自己加一句话调用吧）
新增3个SecCms插件
使用新的Cms替换原来旧的Cms
```

> 2019.12.4

```
v0.43
添加Rails插件
添加Kibana插件
修复部分插件header问题
修改开源协议
修改一些小问题
```

> 2019.12.5

```
v0.44
修复sql语句报错
添加登录验证
添加注册验证
添加web页面dome
```

> 2019.12.15

```
v0.45
减少代码的复用量
优化可视化命令行界面
清理了不必要的代码
v0.45X
再次优化可视化命令行小瑕疵
替换了dome演示动图
```

> 2019.12.23

```
v0.46
添加Metinfo任意文件读取漏洞插件
```

> 2019.12.24

```
v0.47
添加MetinfoSQL注入漏洞
添加Metinfo探针导致信息泄露漏洞
```

> 2020.1.1

```
v0.47XL🌴
添加插件对应的复现文档
```

> 2020.1.5

```
v0.48🌴
添加插件CVE-2019-17558
添加组件1Caitong(共计4个插件)
```

> 2020.1.6

```
v0.49🌴
删除代理扫描功能（后续换方法）
添加组件五车图书管理系统(共计4个插件)
修改一些BUG
添加组件74CMS(共计16个插件)
删除400+的CMS插件（懒得优化了重写吧）
更新Citrix任意文件读取插件
```

> 2020.1.9

```
v0.50🌴
更新Citrix任意文件读取插件
log4j和mongo-express等DNSlog写好在传吧
```

> 2020.1.10

```
v0.50X🌴
更新Phpweb前台任意文件上传漏洞插件
```

> 2020.1.11

```
v0.51🌴
更新log4j远程命令执行漏洞插件
更新mongo-express远程代码执行漏洞插件
修复ActiveMQ任意文件写入漏洞插件
修复linux下写入文件位置出错问题
添加内置Dnslog服务器
添加Dnslog验证类
修改POC编写文档
```

> 2020.1.13

```
v0.51X
添加Citrix远程代码执行漏洞插件
```

> 2020.1.15

```
v0.52🌴
添加B2Bbuilder组件插件
添加BaijiaCMS组件插件
修改主页README文件
```

> 2020.1.18

```
v0.53🌴
添加Spring反射文件下载插件
添加随机数类
```

> 2020.1.19

```
v0.54🌴
修复B2Bbuilder组件返回内容错误问题
修复BaijiaCMS组件返回内容错误问题
添加组件BearAdmin扫描插件
添加组件BEESCMS扫描插件
添加组件Bocweb扫描插件
添加组件BugFree扫描插件
添加组件BusBookingScript扫描插件
```

> 2020.1.20

```
v0.54X🌴
添加组件AbsolutEngine扫描插件
添加组件AfterLogicWebMail扫描插件
```

> 2020.1.21

```
v0.54XL🌴
添加组件CuteCMS扫描插件
添加组件AfterLogicWebMail扫描插件
添加git代理下载
```

> 2020.2.3

```
v0.55🌴
添加贡献者名单
删除了一些没用的
```

> 2020.2.4

```
v0.55X🌴
添加3个插件
修改了POC模板
把URL处理函数放到class中减少代码的复用性
```

> 2020.2.5

```
v0.55XL🌴
添加1个插件
v0.56🌴
修复插件2个
优化导入代码的实践性
删除OA中的重复调用问题
v0.56X🌴
删除代码扫描相关函数以及类
删除JS链接爬取
```

> 2020.2.5-12

```
v0.56🌴-v0.60🌴
优化插件的性能
添加插件CMSMS，Cacti，CTSCMS
修复一些错误问题
```

> 2020.2.13

```
v0.61🌴
补充CMSMS插件3个
v0.62🌴
添加Destoon模块插件
添加DamiCMS模块插件
添加DaMall模块插件
v0.63🌴
优化CMS主函数扫描模块，替换为多线程提升扫描速度
v0.63X🌴
优化InformationDisclosure文件中的插件代码
```

> 2020.2.14

```
v0.64🌴
添加域名目录枚举功能（测试中）信息泄露模块会使用到
v0.64X🌴
目录枚举功能测试完毕，以上线
目前先把InformationDisclosure模块下线，重构修改完毕后再上线
v0.64XL🌴
删除沉于代码
修改JAVA包的名字
删除某文件中的pirint函数
```

> 2020.2.15

```
v0.64🌴
添加CSDJCMS模块插件
v0.65🌴
删除信息泄露插件
重构信息探测插件，可以使用主动扫描，也可以被动扫描（目前还没上线）
target文件夹中为目录枚举后所得到的域名
dir为字典目录
v0.66🌴
修改插件编写文档，优化编写规范
对之前所以老的编写不够规范的插件进行一次批量的修复
v0.66X🌴
修复JenkinsConfigurationErrorCausesUnauthorizedCodeExecutionVulnerability插件中获取Cookie未设置超时时间，倒是插件卡顿
```

> 2020.2.16

```
v0.67🌴
添加CraftedWeb模块插件
添加CmsTop模块插件
v0.68🌴
删除所有调用主函数中for循环列表
调价各个调用主函数为发送到多线程池中，由主函数统一调用
添加线程池类函数
重写写入文件函数并删除了用户自定义输出文件名
修改所有插件中的return（str(Medusa))函数为WriteFile().result(str(url),str(Medusa))函数，方便多payload使用
修改一些插件中的错误问题
删除原来主函数中的多线程函数
修改主函数中发送到多线程的函数统一为发送到多线程池中
修改了主函数中的逻辑结构
```

